# rules_scratch

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
blocks/: BUILD.bazel  schema.json
blocks/control/: BUILD.bazel  if.json
blocks/events/: BUILD.bazel
blocks/looks/: BUILD.bazel
blocks/motion/: BUILD.bazel
blocks/operators/: BUILD.bazel
blocks/pen/: BUILD.bazel
blocks/sensing/: BUILD.bazel
blocks/sound/: BUILD.bazel
blocks/vars/: BUILD.bazel
examples/simple/: BUILD.bazel
examples/simple/scratchy/: BUILD.bazel  main.lisp
examples/simple/stage/: BUILD.bazel
lang/: BUILD.bazel  README.md  lexer.cc  lexer.hh  lexer_test.cc  parser.cc  parser.hh  parser_test.cc
sbc/: BUILD.bazel  args.cc  args.hh  main.cc
scratch/: BUILD.bazel  defs.bzl
scratch/private/: scratch_binary.bzl  scratch_blocks.bzl  scratch_sprite.bzl  scratch_stage.bzl  scratch_toolchain.bzl
tools/jsonschema/: BUILD.bazel  defs.bzl  package.json
tools/stdcapture/: BUILD.bazel  defs.bzl  stdcapture.js
