load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "sbc",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":args",
        "//lang",
        "@glog",
        "@md5",
        "@ziplib",
    ],
)

cc_library(
    name = "args",
    srcs = ["args.cc"],
    hdrs = ["args.hh"],
)
