load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")

js_library(
    name = "lib",
    srcs = [
        "package.json",
        "stdcapture.js",
    ],
)

js_binary(
    name = "stdcapture",
    data = [":lib"],
    entry_point = "stdcapture.js",
    visibility = ["//visibility:public"],
)
